# django-channels

./: .env  db.sqlite3  pyproject.toml
app/: consumers.py  routing.py  urls.py  views.py
app/templates/app/: echo_page.html
config/: asgi.py  settings.py
