[tool.poetry]
name = "django-chat"
version = "0.1.0"
description = ""
authors = ["Geonwoo Jeong <geonwoo.jeong@gmail.com>"]
readme = "README.md"
packages = [{include = "django_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
channels = "^4.0.0"
redis = "^4.4.0"
daphne = "^4.0.0"
django-environ = "^0.9.0"
django-bootstrap5 = "^22.2"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
channels-redis = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
